----โครง---- เพิ่ม Action bar       -favorite        -search เพิ่มหน้า Home และ หน้า Map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_id">1724525574468249</string>
     <string name="reset_password"><u>Reset password</u></string>
     <string name="skip"><u>skip</u></string>
+    <string name="action_settings">Settings</string>
 </resources>
