ลองระบบ login หน้า help

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,14 @@
     <string name="app_id">1724525574468249</string>
     <string name="reset_password"><u>Reset password</u></string>
     <string name="skip"><u>skip</u></string>
-    <string name="action_settings">Settings</string>
-
+    <string name="action_settings">การตั้งค่า</string>
+    <string name="action_help">ช่วยเหลือและความเห็น</string>
+    <string name="action_logout">ออกจากระบบ</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="logout">คุณต้องออกจากระบบหรือไม่</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="color_bar">#78909C</string>
 
 </resources>
